--- a/app/myProfile/testCenterDetails/view.html
+++ b/app/myProfile/testCenterDetails/view.html
@@ -74,7 +74,7 @@
                   </div>
                 </div>
                 <!-- state toggle -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.stateShow[item.id]=0; ">
+                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.stateShow[item.id]=0;" style="max-height:200px;overflow:scroll;">
                   <div class="col-md-4">
                   </div>
                   <div class="col-md-4">
@@ -95,25 +95,25 @@
                       <span><i class="fa fa-trash"></i></span>
                     </div> -->
                   </div>
-                </div>
-                <!-- States -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.stateShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="state in item.sponsored_layouts.state">
-                  <div class="col-md-4">
-                  </div>
-                  <div class="col-md-4">
-                    <span style="cursor:pointer; margin-left:15px;font-size:13px;" class="fix-left"> {{state.name}}</span>
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <!-- <span style="cursor:pointer; font-size:13px;" class="fix-left"> {{state.total_price}}$</span> -->
-                    <!-- <span><i class="fa fa-pencil"></i></span> -->
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(state.id,item.id);"><i class="fa fa-trash"></i></span>
+                  <!-- States -->
+                  <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.stateShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="state in item.sponsored_layouts.state">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                      <span style="cursor:pointer; margin-left:15px;font-size:13px;" class="fix-left"> {{state.name}}</span>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <!-- <span style="cursor:pointer; font-size:13px;" class="fix-left"> {{state.total_price}}$</span> -->
+                      <!-- <span><i class="fa fa-pencil"></i></span> -->
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(state.id,item.id);"><i class="fa fa-trash"></i></span>
+                    </div>
                   </div>
                 </div>
 
                 <!-- City toggle -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.cityShow[item.id]=0;">
+                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.cityShow[item.id]=0;" style="max-height:200px;overflow:scroll;">
                   <div class="col-md-4">
                   </div>
                   <div class="col-md-4">
@@ -124,24 +124,23 @@
                   </div>
                   <div class="col-md-2 text-center">
                   </div>
+                  <!-- Cities -->
+                  <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.cityShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="city in item.sponsored_layouts.city">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                      <span style="cursor:pointer; margin-left:15px;font-size:13px;" class="fix-left"> {{city.name}}</span>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <!-- <span><i class="fa fa-pencil"></i></span> -->
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(city.id, item.id);"><i class="fa fa-trash"></i></span>
+                    </div>
+                  </div>
                 </div>
-                <!-- Cities -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.cityShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="city in item.sponsored_layouts.city">
-                  <div class="col-md-4">
-                  </div>
-                  <div class="col-md-4">
-                    <span style="cursor:pointer; margin-left:15px;font-size:13px;" class="fix-left"> {{city.name}}</span>
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <!-- <span><i class="fa fa-pencil"></i></span> -->
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(city.id, item.id);"><i class="fa fa-trash"></i></span>
-                  </div>
-                </div>
-
                 <!-- County toggle -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.countyShow[item.id]=0; ">
+                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.countyShow[item.id]=0;" style="max-height:200px;overflow:scroll;">
                   <div class="col-md-4">
                   </div>
                   <div class="col-md-4">
@@ -152,24 +151,23 @@
                   </div>
                   <div class="col-md-2 text-center">
                   </div>
+                  <!-- Counties -->
+                  <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.countyShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="county in item.sponsored_layouts.county">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                      <span class="fix-left" style="cursor:pointer; margin-left:15px;font-size:13px;"> {{county.name}}</span>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <!-- <span><i class="fa fa-pencil"></i></span> -->
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(county.id, item.id);"><i class="fa fa-trash"></i></span>
+                    </div>
+                  </div>
                 </div>
-                <!-- Counties -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.countyShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="county in item.sponsored_layouts.county">
-                  <div class="col-md-4">
-                  </div>
-                  <div class="col-md-4">
-                    <span class="fix-left" style="cursor:pointer; margin-left:15px;font-size:13px;"> {{county.name}}</span>
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <!-- <span><i class="fa fa-pencil"></i></span> -->
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(county.id, item.id);"><i class="fa fa-trash"></i></span>
-                  </div>
-                </div>
-
                 <!-- Categories toggle -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.categoryShow[item.id]=0; ">
+                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.categoryShow[item.id]=0;" style="max-height:200px;overflow:scroll;">
                   <div class="col-md-4">
                   </div>
                   <div class="col-md-4">
@@ -180,23 +178,23 @@
                   </div>
                   <div class="col-md-2 text-center">
                   </div>
+                  <!-- Categories -->
+                  <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.categoryShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="category in item.sponsored_layouts.categories">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                      <span class="fix-left" style="cursor:pointer; margin-left:15px;font-size:13px;"> {{category.name}}</span>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <!-- <span><i class="fa fa-pencil"></i></span> -->
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(category.id, item.id);"><i class="fa fa-trash"></i></span>
+                    </div>
+                  </div>
                 </div>
-                <!-- Categories -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.categoryShow[item.id] && $ctrl.productShow[item.id]" ng-repeat="category in item.sponsored_layouts.categories">
-                  <div class="col-md-4">
-                  </div>
-                  <div class="col-md-4">
-                    <span class="fix-left" style="cursor:pointer; margin-left:15px;font-size:13px;"> {{category.name}}</span>
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <!-- <span><i class="fa fa-pencil"></i></span> -->
-                  </div>
-                  <div class="col-md-2 text-center">
-                    <span style="cursor:pointer;" ng-click="$ctrl.deleteConfirm(category.id, item.id);"><i class="fa fa-trash"></i></span>
-                  </div>
+                <div class="col-md-12 bordered">
                 </div>
-          <div class="col-md-12 bordered">
-                  </div>
                 <!-- Ads toggle -->
                 <div class="col-md-12" ng-show="$ctrl.productShow[item.id]" ng-init="$ctrl.adsShow[item.id]=0;">
                   <div class="col-md-4">
