--- a/app/signUp/payment/view.html
+++ b/app/signUp/payment/view.html
@@ -1,7 +1,7 @@
 <div class="container progress-content custom-payment">
   <div class="progressbar">
     <div class="col-md-6 col-md-offset-6">
-      <span class="member-cart" style="cursor:pointer;" ng-click = "$ctrl.goToCart()">
+      <span class="member-cart" style="cursor:pointer;" ng-click="$ctrl.goToCart()">
         <img src="themes/addiction/images/png/Cart-Icon.png">
       </span>
       <div class="progress progress-grediant">
@@ -19,11 +19,11 @@
 
     <div class="col-md-6">
       <div class="progress-img-wrap">
-        <div class="p-form-title2">Payment</div>
+        <div class="p-form-title3">Payment</div>
         <div style="background-image: url('themes/addiction/images/png/illustrations-Woman-Explains.png');" class="progress-img">
         </div>
 
-        <div class="p-tc-desc2 ng-binding">{{$ctrl.displayMsg}}</div>
+        <div class="p-tc-desc3 ng-binding">{{$ctrl.displayMsg}}</div>
       </div>
     </div>
     <div class="col-md-6" style="margin-bottom:5%;">
@@ -63,7 +63,7 @@
           </div>
 
           <div class="form-group">
-            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" required number="true">
+            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" number="true">
           </div>
 
           <div class="form-group">
