--- a/app/signUp/sponsoredPage/view.html
+++ b/app/signUp/sponsoredPage/view.html
@@ -2,31 +2,39 @@
   <div class="row">
     <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
       <form name="$ctrl.sponsoredPage" enctype="multipart/form-data" id="addlistForm">
-        <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-          <p class="heading_treatment_center">Choose your options below to sponsor {{$ctrl.currentCenter[0].label}}</p>
+        <div class="col-md-8 col-sm-8 col-lg-8 col-xs-8">
+          <p class="heading_treatment_center">Choose your options below to sponsor <b>{{$ctrl.currentCenter[0].label}}</b></p>
         </div>
+        <div class="col-md-4 col-sm-4 col-lg-4 col-xs-4" ng-show="1" style="margin-top:2%;">
+          <!-- Active Cart:
+          <select ng-model="$root.activeCenter" ng-options="center.id as center.label for center in $ctrl.treatmentCenters" ng-change="$root.onInit()">
+          </select> -->
+          <span class="member-cart" style="cursor:pointer;" ng-click="$ctrl.skipTo()">
+            <img src="themes/addiction/images/png/Cart-Icon.png" style="    width: 80px;" />
+            <span style="position:absolute;margin-top: -44px;margin-top:-14%;margin-left: 12%;font-size: 12px;">{{$root.totalCartItems}}</span>
+          </span>
 
-        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-          <!-- <div class="col-md-2 col-sm-2 col-xs-12">
+        <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub"> -->
+        <!-- <div class="col-md-2 col-sm-2 col-xs-12">
         <!-- <label for="tname">Treatment Center: </label>
     </div> -->
 
-          <div class="col-sm-8">
-            <!-- <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true" translation-texts="$ctrl.treatmentCenter"></div> -->
-            <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
-          </div>
-          <div class="col-sm-4" ng-show="1">
-            <!-- Active Cart:
+        <!-- <div class="col-sm-8"> -->
+        <!-- <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true" translation-texts="$ctrl.treatmentCenter"></div> -->
+        <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
+        <!-- </div>
+          <div class="col-sm-4" ng-show="1"> -->
+        <!-- Active Cart:
             <select ng-model="$root.activeCenter" ng-options="center.id as center.label for center in $ctrl.treatmentCenters" ng-change="$root.onInit()">
             </select> -->
-            <span class="member-cart" style="cursor:pointer;" ng-click = "$ctrl.skipTo()">
-              <img src="themes/addiction/images/png/Cart-Icon.png" /><span> [Total Items: {{$root.totalCartItems}}]</span>
-            </span>
+        <!-- <span class="member-cart" style="cursor:pointer;" ng-click="$ctrl.skipTo()">
+              <img src="themes/addiction/images/png/Cart-Icon.png" />
+              <span> [Total Items: {{$root.totalCartItems}}]</span>
+            </span> -->
 
-          </div>
-        </div>
+        <!-- </div> -->
+        <!-- </div> -->
         <!-- Search By State Section -->
         <sponsor-state-select></sponsor-state-select>
         <cart-detail> </cart-detail>
