--- a/app/myProfile/addTestCenter/productDetails/view.html
+++ b/app/myProfile/addTestCenter/productDetails/view.html
@@ -285,7 +285,7 @@
       <p class="stick-next-left font-normal " style="margin-left:20%;"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish Ads</a></p>
       <!-- <p class="stick-next-left font-normal back-button"><a href="javascript:;" ng-click="$ctrl.goBack();">Back</a></p> -->
       <!-- <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p> -->
-      <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.gotoPayment()">Next</a></p>
+      <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.gotoPayment()">Make Payment</a></p>
     </div>
 
   </div>
