--- a/app/myProfile/testCenterDetails/view.html
+++ b/app/myProfile/testCenterDetails/view.html
@@ -1,6 +1,31 @@
 <div class="test-center-details">
   <section-heading>Test centers and their details</section-heading>
   <!-- Content Starts -->
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+      <div class="adn-row1">
+        <div class="col-md-12 table-pay1 ">
+          <div class="row bold-th1" style="color:#73ac4b;">
+            <div class="col-md-3">
+              <span style="cursor:pointer;"><i class="fa fa-long-arrow-up"></i>Upgrade</span>
+            </div>
+            <div class="col-md-3">
+              <span style="cursor:pointer;"><i class="fa fa-long-arrow-down"></i>Downgrade</span>
+            </div>
+            <div class="col-md-2">
+              <span style="cursor:pointer;"><i class="fa fa-plus"></i>Add New</span>
+            </div>
+            <div class="col-md-2">
+              <span style="cursor:pointer;"><i class="fa fa-trash"></i>Delete</span>
+            </div>
+            <div class="col-md-2">
+              <span style="cursor:pointer;"><i class="fa fa-pencil"></i>Edit</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
     <div class="progress-img-wrap">
