--- a/app/signUp/payment/view.html
+++ b/app/signUp/payment/view.html
@@ -88,6 +88,6 @@
       </div>
     </div>
     <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goToCart()">Back</a></p>
-    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.congrats()">Next</a></p>
+    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.congrats()">Make Payment</a></p>
   </div>
 </div>
