--- a/app/myProfile/addTestCenter/centerPayment/view.html
+++ b/app/myProfile/addTestCenter/centerPayment/view.html
@@ -63,7 +63,7 @@
           </div>
 
           <div class="form-group">
-            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" required number="true">
+            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" number="true">
           </div>
 
           <div class="form-group">
@@ -90,6 +90,6 @@
     <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goHome();">Home</a></p>
 
     <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goToCart()">Back</a></p>
-    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.congrats()">Next</a></p>
+    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.congrats()">Make Payment</a></p>
   </div>
 </div>
