--- a/app/myProfile/testCenterDetails/view.html
+++ b/app/myProfile/testCenterDetails/view.html
@@ -99,7 +99,7 @@
                   </div>
                 </div>
                 <!-- state toggle -->
-                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.stateShow[item.id]=0;" style="max-height:200px;overflow:scroll;">
+                <div class="col-md-12" ng-show="$ctrl.sponsorshipShow[item.id] && $ctrl.productShow[item.id]" ng-init="$ctrl.stateShow[item.id]=0;" style="max-height: 200px;overflow-y: scroll;padding-bottom: 10px;border-bottom: 1px solid #fff;margin-bottom: 10px;">
                   <div class="col-md-4">
                   </div>
                   <div class="col-md-4">
