--- a/app/sidePanel/areaFilterCard/view_bck.html
+++ b/app/sidePanel/areaFilterCard/view_bck.html
@@ -8,12 +8,12 @@
     </li> -->
     <li>
       <label>
-        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCities()"><a href="/#/state/{{$ctrl.fullName}}-rehab-centers/cities" class="area-filter-link">View All Cities</a></button>
+        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCities()"><a href="/#/cities/{{$ctrl.fullName}}" class="area-filter-link">View All Cities</a></button>
       </label>
     </li>
     <li>
       <label>
-        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCounties()"><a href="/#/state/{{$ctrl.fullName}}-rehab-centers/counties" class="area-filter-link">View All Counties</a></button>
+        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCounties()"><a href="/#/counties/{{$ctrl.fullName}}" class="area-filter-link">View All Counties</a></button>
       </label>
     </li>
   </ul>
